tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_impl_stricter_than_trait_different_object_generics/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: impl has stricter requirements than trait
   ┌─ src/main.nr:17:12
   │
17 │         fn bar_bad<U>() where Option2<T>: MyTrait, OtherOption<Option2<T>>: OtherTrait;
   │            ------- definition of `bar_bad` from trait
   ·
37 │             Option2<B>: MyTrait { }
   │                         ------- impl has extra requirement `Option2<B>: MyTrait`
   │

error: impl has stricter requirements than trait
   ┌─ src/main.nr:21:12
   │
21 │         fn array_bad<U>() where [T; 8]: MyTrait;
   │            --------- definition of `array_bad` from trait
   ·
41 │         fn array_bad<B>() where [B; 8]: MyTrait { }
   │                                         ------- impl has extra requirement `[B; 8]: MyTrait`
   │

error: impl has stricter requirements than trait
   ┌─ src/main.nr:25:12
   │
25 │         fn tuple_bad<U>() where (Option2<T>, Option2<U>): MyTrait;
   │            --------- definition of `tuple_bad` from trait
   ·
45 │         fn tuple_bad<B>() where (Option2<B>, Option2<A>): MyTrait { }
   │                                                           ------- impl has extra requirement `(Option2<B>, Option2<A>): MyTrait`
   │

Aborting due to 3 previous errors
